# codex-quota

./: .gitignore  .npmrc  AGENTS.md  README.md  README.zh-CN.md  electron-builder.yml  electron.vite.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/workflows/: build-release.yml  ci.yml
scripts/: bump-version.mjs  generate-icons.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: debug.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  chatgpt.rs  debug.rs  lib.rs  main.rs  store.rs  summary.rs  tests.rs  time.rs  tray.rs  usage.rs  windows.rs
src/main/: async.ts  chatgpt.ts  constants.ts  index.ts  navigation.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: global.d.ts  main.tsx  styles.css
src/shared/: debug.ts  summary.ts  time.ts  types.ts  usage.ts
tests/: usage.test.ts
