[package]
name = "codex-quota"
version = "1.1.5"
description = "Unofficial local Tauri tray app for viewing Codex quota from an authenticated ChatGPT web session."
authors = ["Sanjeever"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "codex_quota_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codex-quota"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.3", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-single-instance = "2.4.2"
thiserror = "2.0"
tokio = { version = "1", features = ["sync", "time"] }
url = "2.5"
validator = "0.20.0"
